--- a/History
+++ b/History
@@ -1,6 +1,6 @@
-1. What is the exact date on which Holy Angels Church was founded. 
+1. What is the exact date on which Holy Angels Church was founded?
 Does anyone know the exact details of how the church was founded, and why they chose the current location?
 (Please put responses here).
 
-2. Can anyone post the least of pastors of Holy Angels Church going back chronologically?
+2. Can anyone post a list of the pastors of Holy Angels Church going back in time chronologically?
 -Father Andrew Smith, Jr. - Appointed Pastor of Holy Angels Church: July 1st 2012
