--- a/History
+++ b/History
@@ -2,5 +2,5 @@
 Does anyone know the exact details of how the church was founded, and why they chose the current location?
 (Please put responses here).
 
-2. Can anyone post a list of the pastors of Holy Angels Church going back in time chronologically?
+2. Can anyone help to complete this list of the pastors of Holy Angels Church going back in time chronologically?
 -Father Andrew Smith, Jr. - Appointed Pastor of Holy Angels Church: July 1st 2012
