--- a/History
+++ b/History
@@ -4,3 +4,6 @@ Does anyone know the exact details of how the church was founded, and why they c
 
 2. Can anyone help to complete this list of the pastors of Holy Angels Church going back in time chronologically?
 -Father Andrew Smith, Jr. - Appointed Pastor of Holy Angels Church: July 1st 2012
+
+-Father John Atoybi
+
